feat(init): add fundamentals modules

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
     </properties>
     <modules>
         <module>constructs</module>
+        <module>fundamentals</module>
     </modules>
 
 </project>
