--- a/constructs/pom.xml
+++ b/constructs/pom.xml
@@ -3,7 +3,11 @@
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
+    <parent>
+        <groupId>com.developer.java</groupId>
+        <artifactId>java101</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
 
     <groupId>com.developer.java</groupId>
     <artifactId>constructs</artifactId>
@@ -33,7 +37,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-project-info-reports-plugin</artifactId>
-                <version>3.1.1</version> <!-- Ensure a version is defined here -->
+                <version>3.1.1</version>
             </plugin>
             <plugin>
                 <groupId>com.diffplug.spotless</groupId>
