feat: init commit

--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,8 @@
         <module>spring-boot-demo</module>
         <module>spring-boot-dependency-injection</module>
         <module>spring-context-abstractions</module>
+        <module>exception-handling</module>
+        <module>spring-jpa</module>
     </modules>
     <dependencies>
         <dependency>
@@ -67,6 +69,18 @@
             <groupId>org.jeasy</groupId>
             <artifactId>easy-random-core</artifactId>
             <version>5.0.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.11.4</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <version>3.4.1</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
