--- a/spring-boot-demo/pom.xml
+++ b/spring-boot-demo/pom.xml
@@ -20,6 +20,18 @@
             <artifactId>spring-boot-starter-actuator</artifactId>
             <version>3.3.5</version>
         </dependency>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>7.10.2</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-test</artifactId>
+            <version>3.4.1</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 
