--- a/spring-boot-dependency-injection/pom.xml
+++ b/spring-boot-dependency-injection/pom.xml
@@ -14,6 +14,20 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>di</name>
     <description>Demo project for Spring Boot</description>
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-test</artifactId>
+            <version>3.4.1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>7.10.2</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
     <build>
         <plugins>
