--- a/.gitignore
+++ b/.gitignore
@@ -134,6 +134,9 @@ dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
 .mvn/wrapper/maven-wrapper.jar
+.mvn/wrapper/*
+mvnw.cmd
+mvnw
 
 ### Windows ###
 # Windows thumbnail cache files
