--- a/spring-jpa/src/main/resources/application.properties
+++ b/spring-jpa/src/main/resources/application.properties
@@ -1,1 +1,17 @@
 spring.application.name=spring-jpa
+spring.jpa.properties.hibernate.entityManagerFactoryInterface=jakarta.persistence.EntityManagerFactory
+
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:FinancialDistressDB
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+
+
+logging.level.org.springframework.batch.core=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+
+
+spring.liquibase.enabled=true
+spring.liquibase.changeLog=classpath:/db/changelog/db.changelog-master.yaml
