--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
         <module>spring-boot-dependency-injection</module>
         <module>spring-context-abstractions</module>
         <module>exception-handling</module>
-        <module>spring-jpa</module>
+        <module>spring-data</module>
     </modules>
     <dependencies>
         <dependency>
