--- a/spring-data/src/main/resources/application.properties
+++ b/spring-data/src/main/resources/application.properties
@@ -1,26 +1,39 @@
+# Application name
 spring.application.name=spring-data
 
-
-## JPA
-# spring.jpa.properties.hibernate.entityManagerFactoryInterface=jakarta.persistence.EntityManagerFactory
-
-## H2
+# H2 Database Configuration
+# Enabling H2 Console
 spring.h2.console.enabled=true
+
+# DataSource Configuration
 spring.datasource.url=jdbc:h2:mem:FinancialDistressDB
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 
-## Logging
+# Logging Configuration
+# Spring Batch Logging Level
 logging.level.org.springframework.batch.core=DEBUG
+
+# Hibernate SQL Logging Level
 logging.level.org.hibernate.SQL=DEBUG
 
-## Liquibase
+# Liquibase Configuration
+# Enabling Liquibase
 spring.liquibase.enabled=true
+
+# ChangeLog File Location
 spring.liquibase.changeLog=classpath:/db/changelog/db.changelog-master.yaml
 
-## Custom datasource data
+# Custom DataSource Configuration
+# DataSource URL
 custom.datasource.url=jdbc:h2:mem:FinancialDistressDB
+
+# Driver Class Name
 custom.datasource.driverClassName=org.h2.Driver
+
+# DataSource Username
 custom.datasource.username=root
+
+# DataSource Password
 custom.datasource.password=
