--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
@@ -17,7 +17,7 @@
     <modules>
         <module>application-context-explained</module>
         <module>constructs</module>
-        <module>exception-handling</module>
+        <module>exceptions</module>
         <module>fundamentals</module>
         <module>generics</module>
         <module>ioc-demo</module>
@@ -25,8 +25,7 @@
         <module>spring-boot-demo</module>
         <module>spring-boot-dependency-injection</module>
         <module>spring-context-abstractions</module>
-        <module>spring-data-persistence</module>
-        <module>exceptions</module>
+<!--        <module>spring-data-persistence</module>-->
     </modules>
     <dependencies>
         <dependency>
