feat(loops): for and streams contrasting
compare classical iteration(for) with stream() and parallelStream()

--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <module>spring-boot-demo</module>
         <module>spring-boot-dependency-injection</module>
         <module>spring-context-abstractions</module>
+        <module>streams</module>
     </modules>
     <dependencies>
         <dependency>
