feat(common): add and refactor utils

--- a/sample-spring-microservices-new/config-service/src/main/resources/config/employee-service.yml
+++ b/sample-spring-microservices-new/config-service/src/main/resources/config/employee-service.yml
@@ -7,7 +7,7 @@ eureka:
     serviceUrl:
       defaultZone: http://localhost:8061/eureka/
   instance:
-    instanceId: ${spring.application.name}:${spring.application.instance_id:${random.value}}
+    instanceId: ${spring.application.name}:${spring.application.instance_id:${randomizer.value}}
       
 logging:
   pattern:
