--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
         <module>interfaces-and-lambda-expressions</module>
         <module>spring-data-persistence</module>
         <module>streams</module>
-        <module>Utils</module>
+        <module>utils</module>
     </modules>
     <dependencies>
         <dependency>
@@ -59,11 +59,6 @@
             <version>1.3.2</version>
         </dependency>
         <dependency>
-            <groupId>io.codearte.jfairy</groupId>
-            <artifactId>jfairy</artifactId>
-            <version>0.5.9</version>
-        </dependency>
-        <dependency>
             <groupId>net.datafaker</groupId>
             <artifactId>datafaker</artifactId>
             <version>2.4.2</version>
@@ -73,6 +68,11 @@
             <artifactId>easy-random-core</artifactId>
             <version>5.0.0</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.devskiller</groupId>
+            <artifactId>jfairy</artifactId>
+            <version>0.6.5</version>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
