--- a/spring-data-persistence/src/main/resources/application.properties
+++ b/spring-data-persistence/src/main/resources/application.properties
@@ -29,6 +29,8 @@ spring.liquibase.changeLog=classpath:/db/changelog/db.changelog-master.yaml
 # DataSource URL
 custom.datasource.url=jdbc:h2:mem:FinancialDistressDB
 
+# REVIEW: Check why is return invalid properties configuration:
+# REVIEW: "Cannot resolve configuration property 'custom.datasource.driverClassName'"
 # Driver Class Name
 custom.datasource.driverClassName=org.h2.Driver
 
