--- a/constructs/enums/pom.xml
+++ b/constructs/enums/pom.xml
@@ -9,21 +9,8 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-
     <artifactId>enums</artifactId>
-
-    <properties>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
-    <dependencies>
-        <dependency>
-            <groupId>org.jetbrains</groupId>
-            <artifactId>annotations</artifactId>
-            <version>26.0.1</version>
-            <scope>compile</scope>
-        </dependency>
-    </dependencies>
+    <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
 
 </project>
