--- a/application-context-explained/bean-ambiguity/pom.xml
+++ b/application-context-explained/bean-ambiguity/pom.xml
@@ -3,22 +3,19 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <parent>
         <groupId>com.developer.java</groupId>
         <artifactId>java101</artifactId>
         <version>1.0-SNAPSHOT</version>
+        <relativePath>../../pom.xml</relativePath>
     </parent>
 
-    <modules>
-        <module>bean-ambiguity</module>
-        <module>car-stereotype-annotation</module>
-        <module>no-unique-bean-exception</module>
-        <module>register-bean-programatically</module>
-        <module>transportation</module>
-    </modules>
+    <artifactId>bean-ambiguity</artifactId>
 
-    <artifactId>application-context-explained</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
+    <properties>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+
 </project>
