--- a/interfaces-and-lambda-expressions/interfaces/pom.xml
+++ b/interfaces-and-lambda-expressions/interfaces/pom.xml
@@ -7,6 +7,7 @@
         <groupId>com.developer.java</groupId>
         <artifactId>java101</artifactId>
         <version>1.0-SNAPSHOT</version>
+        <!-- QUESTION: is this correct? -->
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
