--- a/spring-persistence-layer/pom.xml
+++ b/spring-persistence-layer/pom.xml
@@ -12,10 +12,10 @@
         <!-- lookup parent from repository -->
     </parent>
     <groupId>com.developer.java</groupId>
-    <artifactId>spring-data-persistence</artifactId>
+    <artifactId>spring-persistence-layer</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>spring-data</name>
-    <description>Demo project for Spring JPA</description>
+    <name>spring-persistence-layer</name>
+    <description>Demo project for Spring JPA &amp; Hibernate</description>
 
     <properties>
         <!--
@@ -30,11 +30,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-            <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -64,10 +59,6 @@
             <groupId>jakarta.persistence</groupId>
             <artifactId>jakarta.persistence-api</artifactId>
             <version>${jakarta-persistence.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.liquibase</groupId>
-            <artifactId>liquibase-core</artifactId>
         </dependency>
         <dependency>
             <groupId>com.mysql</groupId>
